# simple-rans

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  simple-rans.sublime-project
results/: adaptive-history.tsv  adaptive-plot.py  adaptive.txt  basic_rans_tests.txt  basic_rans_tests_fts.txt  basic_rans_verbose.txt  fib_coding.txt
src/: bit_buffer.cpp  bit_buffer.h  common.h  compr_stats.cpp  compr_stats.h  data_block.cpp  data_block.h  freq_table.cpp  freq_table.h  num_freq_table.cpp  num_freq_table.h  num_freq_table_adapt.cpp  num_freq_table_adapt.h  num_freq_table_alias.cpp  num_freq_table_alias.h  rans.cpp  rans.h
tests/: adapt_test.cpp  alias_test.cpp  base_test.cpp  rans_basic_test.cpp
